--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorDark">@android:color/background_dark</color>
     <color name="colorWhite">@android:color/background_light</color>
     <color name="colorCyan">#808080</color>
+    <color name="green">#00FF00</color>
 </resources>
