--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
         <item name="android:background">@null</item>
         <item name="android:textSize">24sp</item>
         <item name="android:padding">15dp</item>
-        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textColor">@color/green</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_centerInParent">true</item>
         <item name="android:layout_width">wrap_content</item>
