--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -3,13 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="5dp">
+    android:gravity="center_vertical"
+    android:padding="7dp">
     <ImageView
         android:id="@+id/folder_image"
         android:layout_marginRight="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         tools:ignore="RtlHardcoded" />
 
         <TextView
@@ -17,9 +18,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/file_name"
+            android:textSize="24sp"
             android:textColor="@color/colorWhite"
             android:layout_toEndOf="@+id/folder_image"
-            android:padding="5dp"/>
+            android:padding="10dp"/>
 
         <TextView
             android:id="@+id/file_date"
@@ -27,7 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="15dp"
-            android:padding="5dp"
+            android:textSize="24sp"
+            android:padding="10dp"
             android:text="@string/date"
             android:textColor="@color/colorWhite"
             tools:ignore="RelativeOverlap" />
