--- a/app/src/main/res/layout/part_layout.xml
+++ b/app/src/main/res/layout/part_layout.xml
@@ -2,25 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center">
 
 
     <TextView
         android:id="@+id/txt_art"
         android:layout_width="0dp"
-        android:layout_weight="2.7"
+        android:layout_weight="5"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:maxLines="1"
         style="@style/PartStyle"/>
 
     <TextView
         android:id="@+id/txt_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3.5"
+        android:layout_weight="6"
         android:text="TextView"
-        android:textSize="12sp"
+        android:textSize="14sp"
         style="@style/PartStyle"/>
 
     <TextView
@@ -28,6 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:gravity="center"
         android:text="Text"
         style="@style/PartStyle"/>
 
@@ -35,8 +37,9 @@
         android:id="@+id/txt_price"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1.5"
+        android:layout_weight="2.4"
+        android:gravity="center"
         android:text="Text"
-        android:textSize="12sp"
+        android:textSize="16sp"
         style="@style/PartStyle"/>
 </LinearLayout>
