--- a/app/src/main/res/layout/activity_choise.xml
+++ b/app/src/main/res/layout/activity_choise.xml
@@ -62,4 +62,18 @@
 
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/status_progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="55dp"
+        android:layout_below="@+id/scroll_display"
+        android:progressDrawable="@drawable/custom_progress"
+        android:visibility="invisible"/>
+
 </RelativeLayout>
