--- a/app/src/main/res/layout/part_layout.xml
+++ b/app/src/main/res/layout/part_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,9 +12,10 @@
         android:layout_width="0dp"
         android:layout_weight="5"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="articul"
         android:maxLines="1"
-        style="@style/PartStyle"/>
+        style="@style/PartStyle"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/txt_name"
@@ -22,16 +24,18 @@
         android:layout_weight="6"
         android:text="TextView"
         android:textSize="14sp"
-        style="@style/PartStyle"/>
+        style="@style/PartStyle"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/txt_quantity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="1.5"
         android:gravity="center"
         android:text="Text"
-        style="@style/PartStyle"/>
+        style="@style/PartStyle"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/txt_price"
@@ -41,5 +45,6 @@
         android:gravity="center"
         android:text="Text"
         android:textSize="16sp"
-        style="@style/PartStyle"/>
+        style="@style/PartStyle"
+        tools:ignore="HardcodedText" />
 </LinearLayout>
