--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -192,7 +192,7 @@
             android:background="@color/colorDark"
             android:gravity="end">
             <Button
-                android:id="@+id/button_good"
+                android:id="@+id/scan_complete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorWhite"
