--- a/app/src/main/res/layout/box_layout.xml
+++ b/app/src/main/res/layout/box_layout.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal"
     android:padding="10dp"
     android:text="TextView"
-    android:textColor="@color/green"
+    android:textColor="@drawable/selector"
     android:textStyle="bold"
     android:textSize="24sp">
 </TextView>
