--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -195,8 +195,10 @@
                 android:id="@+id/scan_complete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorAccent"
                 android:text="@string/scan_complete"
+                android:textSize="25sp"
+                android:layout_margin="20dp"
                 android:layout_gravity="bottom"
                 android:layout_marginRight="25dp"
                 android:layout_marginBottom="10dp"
