--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -9,30 +9,37 @@
         android:id="@+id/folder_image"
         android:layout_marginRight="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginStart="35dp"
         android:layout_width="50dp"
         android:layout_height="50dp"
         tools:ignore="RtlHardcoded" />
 
-        <TextView
-            android:id="@+id/file_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/file_name"
-            android:textSize="24sp"
-            android:textColor="@color/colorWhite"
-            android:layout_toEndOf="@+id/folder_image"
-            android:padding="10dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/folder_image"
+        android:layout_marginStart="20dp">
 
-        <TextView
-            android:id="@+id/file_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="15dp"
-            android:textSize="24sp"
-            android:padding="10dp"
-            android:text="@string/date"
-            android:textColor="@color/colorWhite"
-            tools:ignore="RelativeOverlap" />
+    <TextView
+        android:id="@+id/file_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="5"
+        android:text="@string/file_name"
+        android:textSize="24sp"
+        android:textColor="@color/colorWhite"
+        android:padding="10dp"/>
+
+    <TextView
+        android:id="@+id/file_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:textSize="24sp"
+        android:padding="10dp"
+        android:text="@string/date"
+        android:textColor="@color/colorWhite"/>
+    </LinearLayout>
 
 </RelativeLayout>
