--- a/app/src/main/res/layout/activity_manager.xml
+++ b/app/src/main/res/layout/activity_manager.xml
@@ -38,7 +38,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:padding="25dp"
+            android:padding="15dp"
+            android:layout_margin="35dp"
             android:background="@color/colorDark"
             app:srcCompat="@drawable/ok_images" />
 
@@ -48,7 +49,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:background="@color/colorDark"
-            android:padding="25dp"
+            android:padding="15dp"
+            android:layout_margin="35dp"
             app:srcCompat="@drawable/back_icon" />
 
         <TextView
@@ -61,7 +63,7 @@
             android:background="@color/colorDark"
             android:padding="25dp"
             android:textColor="@color/green"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:textStyle="bold"
             tools:ignore="RelativeOverlap" />
     </RelativeLayout>
