--- a/app/src/main/res/layout/activity_calculate.xml
+++ b/app/src/main/res/layout/activity_calculate.xml
@@ -16,14 +16,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"
-        android:gravity="left"
+        android:gravity="start"
         android:background="@color/colorDark" />
 
     <TextView
         android:id="@+id/txt_date_doc"
         style="@style/TextStyle"
         android:layout_width="200dp"
-        android:gravity="right"
+        android:gravity="end"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="50dp"
@@ -145,7 +145,8 @@
         android:text="@string/fact_quantity"
         android:textSize="18sp"
         android:paddingEnd="10dp"
-        android:paddingRight="10dp"/>
+        android:paddingRight="10dp"
+        tools:ignore="RtlHardcoded" />
     <TextView
         android:id="@+id/txt_real_quantity"
         android:layout_width="40dp"
@@ -196,7 +197,7 @@
         android:id="@+id/btn_upload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="40dp"
         android:layout_marginTop="40dp"
@@ -205,6 +206,7 @@
         android:background="@color/colorDark"
         android:padding="20dp"
         android:text="@string/load_to_file"
-        android:textColor="@color/colorWhite" />
+        android:textColor="@color/colorWhite"
+        tools:ignore="RelativeOverlap" />
 
 </RelativeLayout>
