--- a/app/src/main/res/layout/round_corner.xml
+++ b/app/src/main/res/layout/round_corner.xml
@@ -2,7 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    style="@style/AppTheme.NoActionBar">
 
     <LinearLayout
         android:layout_width="600dp"
@@ -14,7 +15,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/a"
             android:orientation="vertical">
 
             <TextView
