--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -129,10 +129,10 @@
 
             <ImageView
                 android:id="@+id/im_status"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_below="@+id/scanner"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="50dp"
                 android:layout_centerHorizontal="true"
                 tools:ignore="ContentDescription" />
 
@@ -141,9 +141,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginBottom="30dp"
                 android:background="@null"
                 android:src="@drawable/back_icon"
                 tools:ignore="ContentDescription" />
@@ -181,7 +180,8 @@
             android:layout_height="0dp"
             android:layout_weight="7"
             android:layout_marginTop="40dp"
-            android:layout_marginBottom="40dp">
+            android:layout_marginBottom="40dp"
+            tools:ignore="NestedWeights">
 
         </ListView>
 
@@ -191,19 +191,19 @@
             android:layout_weight="1.5"
             android:background="@color/colorDark"
             android:gravity="end">
+
             <Button
                 android:id="@+id/scan_complete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorAccent"
-                android:text="@string/scan_complete"
-                android:textSize="25sp"
+                android:layout_gravity="center"
                 android:layout_margin="20dp"
-                android:layout_gravity="bottom"
-                android:layout_marginRight="25dp"
+                android:layout_marginEnd="25dp"
                 android:layout_marginBottom="10dp"
                 android:background="@color/colorDark"
-                android:layout_marginEnd="25dp" />
+                android:text="@string/scan_complete"
+                android:textColor="@color/colorAccent"
+                android:textSize="25sp" />
         </LinearLayout>
     </LinearLayout>
 
