--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -115,7 +115,7 @@
                 android:layout_margin="40dp"
                 android:hint="@string/scaning"
                 android:background="@null"
-                android:textColorHint="@color/colorAccent"
+                android:textColorHint="@color/yellow"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:gravity="center"
@@ -196,13 +196,12 @@
                 android:id="@+id/scan_complete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="20dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginBottom="10dp"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="35dp"
                 android:background="@color/colorDark"
                 android:text="@string/scan_complete"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/yellow"
+                android:textStyle="bold"
                 android:textSize="25sp" />
         </LinearLayout>
     </LinearLayout>
